--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "angular-calendar": "^0.26.4",
+    "angularx-flatpickr": "^6.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "date-fns": "^1.29.0",
+    "flatpickr": "^4.5.2",
+    "ngx-google-places-autocomplete": "^2.0.1",
+    "ngx-youtube-player": "^6.0.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
