--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "~7.0.0",
+    "@angular/cli": "^7.1.2",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "^7.0.4",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -27,21 +30,25 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "date-fns": "^1.29.0",
+    "express": "^4.16.4",
     "flatpickr": "^4.5.2",
     "ngx-google-places-autocomplete": "^2.0.1",
     "ngx-youtube-player": "^6.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
+    "typescript": "~3.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/cli": "^7.1.2",
+    "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -53,5 +60,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
+  },
+  "engines": {
+    "node": "10.14.1",
+    "npm": "6.4.1"
   }
 }
