--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build -prod"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -65,4 +65,5 @@
     "node": "10.14.1",
     "npm": "6.4.1"
   }
+  
 }
